--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -69,16 +69,16 @@
                 <div class="col-lg-12">
                     <ul class="nav nav-tabs">
                         <li><a ui-sref="clientesList">Clientes</a></li>
-                        <li><a ui-sref="comentariosList">Clientes</a></li>
-                        <li><a ui-sref="artistasList">Clientes</a></li>
-                        <li><a ui-sref="blogsList">Clientes</a></li>
-                        <li><a ui-sref="catalogosList">Clientes</a></li>
-                        <li><a ui-sref="comprasList">Clientes</a></li>
-                        <li><a ui-sref="galeriasList">Clientes</a></li>
-                        <li><a ui-sref="hojasList">Clientes</a></li>
-                        <li><a ui-sref="marcosList">Clientes</a></li>
-                        <li><a ui-sref="obrasList">Clientes</a></li>
-                        <li><a ui-sref="pagosList">Clientes</a></li>
+                        <li><a ui-sref="comentariosList">Comentarios</a></li>
+                        <li><a ui-sref="artistasList">Artistas</a></li>
+                        <li><a ui-sref="blogsList">Blogs</a></li>
+                        <li><a ui-sref="catalogosList">Catalogos</a></li>
+                        <li><a ui-sref="comprasList">Compras</a></li>
+                        <li><a ui-sref="galeriasList">Galerias</a></li>
+                        <li><a ui-sref="hojasList">Hojas de vida</a></li>
+                        <li><a ui-sref="marcosList">Marcos</a></li>
+                        <li><a ui-sref="obrasList">Obras</a></li>
+                        <li><a ui-sref="pagosList">Pagos</a></li>
                     </ul>                   
                 </div>
             </div>               
