--- a/galeriaarte-web/src/main/webapp/src/modules/clientes/clientes.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/clientes/clientes.list.html
@@ -8,7 +8,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="editorial in editorialsRecords">
+                <tr ng-repeat="cliente in clientesRecords">
                     <td id="{{$index}}-name">{{editorial.name}}</td>                                  
                 </tr>
             </tbody>
