Listas del Front Blog y Marco

--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="mainApp">
     <head>
         <title>Galeria - By Kadda</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
