--- a/galeriaarte-web/src/main/webapp/src/modules/marcos/marcos.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/marcos/marcos.list.html
@@ -8,7 +8,7 @@
             <div class="thumbnail">
                 <img class="img-responsive" ng-src='{{marco.image}}' alt="{{marco.name}}" />  
                  <!-- Despliega en el caption de la imagen el nombre del marco -->
-                <div class="caption text-center">{{marco.name}}</div>
+                <div class="caption text-center"><a ui-sref="marcoDetail({marcoId: marco.id})">{{marco.name}}</a></div>
             </div>
         </div>
     </div>
