Mejoras en Blog

--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -63,8 +63,8 @@
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script> 
     </head>
     <body>
-       <!-- <h1>Galeria</h1>
-        <span>By Kadda</span>-->
+       <h1>Galeria</h1>
+        <span>By Kadda</span>
         
         <div class="container-fluid"> 
             <div class="row">
