--- a/galeriaarte-web/src/main/webapp/src/modules/blogs/blogs.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/blogs/blogs.list.html
@@ -1,23 +1,35 @@
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
 <div class="container-fluid">
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID</th> 
-                    <th>Nombre</th>
-                    <th>Contenido</th>
-                    <th>ID Artista</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="blog in blogsRecords">
-                    <td id="{{$index}}-id">{{blog.id}}</td>
-                    <td id="{{$index}}-nombre">{{blog.name}}</td>
-                    <td id="{{$index}}-contenido">{{blog.contenido}}</td>
-                    <td id="{{$index}}-artista_id">{{blog.artista_id}}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="panel-group">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><label>Lista de blogs</label></div>
+            <div class="panel-body">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-2" role="group" aria-label="First group">
+                        <a class="btn btn-info" ui-sref="blogsCreate"><span class="glyphicon glyphicon-plus-sign"></span> Agregar un nuevo blog</a>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Nombre</th>     
+                                <th>Acciones</th>  
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="blog in blogsRecords">
+                                <td id="{{$index}}-nombre"><a ui-sref="blogDetail({blogId: blog.id})">{{blog.name}}</a></td>
+                                <td id="{{$index}}-acciones">
+                                    <a class="btn btn-default btn-sm" ui-sref="blogUpdate({blogId: blog.id})"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="btn btn-danger btn-sm" ui-sref="blogDelete({blogId: blog.id})"><span class="glyphicon glyphicon-trash"></span></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 </div>
