--- a/galeriaarte-web/src/main/webapp/src/modules/catalogos/new/catalogos.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/catalogos/new/catalogos.new.html
@@ -1,14 +1,20 @@
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createBlog">Crear nuevo blog</label>
-                <label ng-if="edit" id="editBlog">Editar blog</label></div>
+            <div class="panel-heading"><label ng-if="!edit" id="createBlog">Crear catalogo blog</label>
+                <label ng-if="edit" id="editCatalogo">Editar catalogo</label></div>
            < <div class="panel-body">
-                <form ng-submit="createBlog()" name="blog">
+                <form ng-submit="createCatalogo()" categoria="catalogo">
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="blogName" class="col-sm-2">Nombre:</label>
-                            <input id="blogName" required ng-model="blogName" class="col-sm-6"/>
+                            <label for="categoriaCatalogo" class="col-sm-2">Categoria:</label>
+                            <input id="categoriaCatalogo" required ng-model="categoriaCatalogo" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -18,7 +24,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="form-group col-sm-4" ng-if="!blog.$valid">
+                        <div class="form-group col-sm-4" ng-if="!catalogo.$valid">
 
                             <div class="alert alert-warning" >
                                 <strong>Warning!</strong><p>All inputs are required*</p>
@@ -27,8 +33,8 @@
                     </div> 
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
-                            <input ng-show="blog.$valid" type="submit" value="Save" class="btn btn-success"/>
-                            <a class="btn btn-info" ui-sref="blogsList">Cancel</a>
+                            <input ng-show="catalogo.$valid" type="submit" value="Save" class="btn btn-success"/>
+                            <a class="btn btn-info" ui-sref="catalogosList">Cancel</a>
                         </div>
                     </div>
                 </form>
