--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -51,6 +51,9 @@
          <!--Marcos--> 
         <script src="src/modules/marcos/marcos.mod.js" type="text/javascript"></script>
         <script src="src/modules/marcos/marcos.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/marcos/delete/marcos.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/marcos/new/marcos.new.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/marcos/update/marcos.update.ctrl.js" type="text/javascript"></script>
                 
 <!--         Obras 
         <script src="src/modules/obras/obras.mod.js" type="text/javascript"></script>
