--- a/galeriaarte-web/src/main/webapp/src/modules/marcos/marcos.detail.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/marcos/marcos.detail.html
@@ -18,12 +18,11 @@
                     <dd>{{currentMarco.alto}}</dd>
                     <hr>
                     <dt>Ancho (m)</dt>
-                    <dd>{{currentMarco.alto}}</dd>
+                    <dd>{{currentMarco.ancho}}</dd>
                     <hr>
                     <dt>Precio (COP)</dt>
                     <dd>{{currentMarco.valor}}</dd>
                     
-
                 </dl>
             </div>
         </div>
