--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -31,6 +31,9 @@
          <!--Blogs--> 
         <script src="src/modules/blogs/blogs.mod.js" type="text/javascript"></script>
         <script src="src/modules/blogs/blogs.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/blogs/delete/blogs.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/blogs/new/blogs.new.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/blogs/update/blogs.update.ctrl.js" type="text/javascript"></script>
                 
          <!--Catalogos--> 
         <script src="src/modules/catalogos/catalogos.mod.js" type="text/javascript"></script>
