--- a/galeriaarte-web/src/main/webapp/src/modules/marcos/new/marcos.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/marcos/new/marcos.new.html
@@ -52,7 +52,7 @@
                     </div> 
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
-                            <input ng-show="marco.$valid" type="submit" value="Save" class="btn btn-success"/>
+                            <input ng-show="marco.$valid" type="submit" value="Guardar" class="btn btn-success"/>
                             <a class="btn btn-info" ui-sref="marcosList">Cancelar</a>
                         </div>
                     </div>
