--- a/galeriaarte-web/src/main/webapp/src/modules/artistas/new/artistas.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/artistas/new/artistas.new.html
@@ -2,7 +2,7 @@
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createArtista">Crear un nuevo Artista</label>
-                <label ng-if="edit" id="editArtista">Edit Artista</label></div>
+                <label ng-if="edit" id="editArtista">Editar Artista</label></div>
             <div class="panel-body">
                 <form ng-submit="createArtista()" name="artista">
                     <div class="form-group row">
