--- a/galeriaarte-web/src/main/webapp/src/modules/artistas/artistas.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/artistas/artistas.list.html
@@ -1,23 +1,37 @@
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div id="alertPanel" style="text-align: center"></div>
 <div class="container-fluid">
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Id</th>    
-                    <th>Nombre</th>
-                   
-  
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="artistas in artistasRecords">
-                    <td id="{{$index}}-id">{{artistas.id}}</td>
-                    <td id="{{$index}}-name">{{artistas.name}}</td>
-                                     
-                </tr>
-            </tbody>
-        </table>
+    <div class="panel-group">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><label>Lista de Artistas</label></div>
+            <div class="panel-body">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-2" role="group" aria-label="First group">
+                        <a class="btn btn-info" ui-sref="artistasCreate"><span class="glyphicon glyphicon-plus-sign"></span> Agregar un nuevo Artista</a>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Id</th>    
+                                <th>Name</th>  
+                                <th>Actions</th>  
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="artista in artistasRecords">
+                                <td id="{{$index}}-id"><a ui-sref="artistaDetail({artistaId: artista.id})">{{artista.id}}</a></td>
+                                <td id="{{$index}}-name"><a ui-sref="artistaDetail({artistaName: artista.name})">{{artista.name}}</a></td>
+                                <td id="{{$index}}-actions">
+                                    <a class="btn btn-default btn-sm" ui-sref="artistaUpdate({artistaId: artista.id})"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="btn btn-danger btn-sm" ui-sref="artistaDelete({artistaId: artista.id})"><span class="glyphicon glyphicon-trash"></span></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 </div>
