--- a/galeriaarte-web/src/main/webapp/src/modules/blogs/new/blogs.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/blogs/new/blogs.new.html
@@ -3,7 +3,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createBlog">Crear nuevo blog</label>
                 <label ng-if="edit" id="editBlog">Editar blog</label></div>
-           < <div class="panel-body">
+            <div class="panel-body">
                 <form ng-submit="createBlog()" name="blog">
                     <div class="form-group row">
                         <div class="form-group col-md-6">
