--- a/galeriaarte-web/src/main/webapp/src/modules/artistas/artistas.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/artistas/artistas.list.html
@@ -20,7 +20,7 @@
                         <tbody>
                             <tr ng-repeat="artista in artistasRecords">
                                 <td id="{{$index}}-id"><a ui-sref="artistaDetail({artistaId: artista.id})">{{artista.id}}</a></td>
-                                <td id="{{$index}}-name"><a ui-sref="artistaDetail({artistaName: artista.name})">{{artista.name}}</a></td>
+                                <td id="{{$index}}-name"><a ui-sref="artistaDetail({artistaId: artista.id})">{{artista.name}}</a></td>
                                 <td id="{{$index}}-actions">
                                     <a class="btn btn-default btn-sm" ui-sref="artistaUpdate({artistaId: artista.id})"><span class="glyphicon glyphicon-edit"></span></a>
                                     <a class="btn btn-danger btn-sm" ui-sref="artistaDelete({artistaId: artista.id})"><span class="glyphicon glyphicon-trash"></span></a>
