--- a/galeriaarte-web/src/main/webapp/src/modules/obras/delete/obra.delete.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/obras/delete/obra.delete.html
@@ -1,5 +1,5 @@
 <div class="center-block well text-center">
-    <h1>¿Está seguro que desea eliminar a el artista?</h1>
-    <button id="confirm-delete" ng-click="deleteArtista()" class="btn btn-danger">Delete</button>
-    <a id="cancel-delete" ui-sref="artistasList" class="btn btn-info">Cancel</a>
+    <h1>¿Está seguro que desea eliminar la obra?</h1>
+    <button id="confirm-delete" ng-click="deleteObra()" class="btn btn-danger">Delete</button>
+    <a id="cancel-delete" ui-sref="obrasList" class="btn btn-info">Cancel</a>
 </div>
