--- a/galeriaarte-web/src/main/webapp/src/modules/obras/obras.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/obras/obras.list.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label>Lista de Artistas</label></div>
+            <div class="panel-heading"><label>Lista de Obras</label></div>
             <div class="panel-body">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <a class="btn btn-info" ui-sref="artistasCreate"><span class="glyphicon glyphicon-plus-sign"></span> Agregar un nuevo Artista</a>
+                        <a class="btn btn-info" ui-sref="obrasCreate"><span class="glyphicon glyphicon-plus-sign"></span> Agregar una nueva Obra</a>
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -18,12 +18,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="artista in artistasRecords">
-                                <td id="{{$index}}-id"><a ui-sref="artistaDetail({artistaId: artista.id})">{{artista.id}}</a></td>
-                                <td id="{{$index}}-name"><a ui-sref="artistaDetail({artistaName: artista.name})">{{artista.name}}</a></td>
+                            <tr ng-repeat="obra in obrasRecords">
+                                <td id="{{$index}}-id"><a ui-sref="obraDetail({obraId: obra.id})">{{obra.id}}</a></td>
+                                <td id="{{$index}}-name"><a ui-sref="obraDetail({obraId: obra.id})">{{obra.name}}</a></td>
                                 <td id="{{$index}}-actions">
-                                    <a class="btn btn-default btn-sm" ui-sref="artistaUpdate({artistaId: artista.id})"><span class="glyphicon glyphicon-edit"></span></a>
-                                    <a class="btn btn-danger btn-sm" ui-sref="artistaDelete({artistaId: artista.id})"><span class="glyphicon glyphicon-trash"></span></a>
+                                    <a class="btn btn-default btn-sm" ui-sref="obraUpdate({obraId: obra.id})"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="btn btn-danger btn-sm" ui-sref="obraDelete({obraId: obra.id})"><span class="glyphicon glyphicon-trash"></span></a>
                                 </td>
                             </tr>
                         </tbody>
