--- a/galeriaarte-web/src/main/webapp/src/modules/obras/new/obras.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/obras/new/obras.new.html
@@ -2,7 +2,7 @@
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createObra">Crear una nueva Obra</label>
-                <label ng-if="edit" id="editObra">dsaldasdasdsad</label></div>
+                <label ng-if="edit" id="editObra">Editar una Obra</label></div>
             <div class="panel-body">
                 <form ng-submit="createObra()" name="obra">
              
