--- a/galeriaarte-web/src/main/webapp/src/modules/comentarios/comentarios.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/comentarios/comentarios.list.html
@@ -1,21 +1,37 @@
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" 
-       close="closeAlert()">{{alert.msg}} </alert>
-<div id="alertPanel" style="text-align: center"></div>
-<div class="container-fluid">  
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Id</th> 
-                    <th>Contenido</th>              
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="comentario in comentarioRecords"> 
-                    <td id="{{$index}}-id">{{comentario.id}}</td>   
-                    <td id="{{$index}}-contenido">{{comentario.contenido}}</td>
-                </tr>
-            </tbody>
-        </table>
+<div class="container-fluid">
+    <div class="panel-group">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><label>Comentarios list</label></div>
+            <div class="panel-body">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-2" role="group" aria-label="First group">
+                        <a class="btn btn-info" ui-sref="comentarioCreate"><span class="glyphicon glyphicon-plus-sign"></span> Add new comentario</a>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Id</th> 
+                                <th>Contenido</th>
+                                <th>Usuario</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat= "comentario in comentariosRecords"> 
+                                <td id="{{$index}}-id"><a ui-sref="comentarioDetail({comentarioId: comentario.id})">{{comentario.id}}</a></td>   
+                                <td id="{{$index}}-contenido">{{comentario.contenido}}</td>
+                                <td id="{{$index}}-name"><a ui-sref="clienteDetail({clienteId: comentario.cliente.id})">{{comentario.cliente.name}}</a></td>
+                                <td id="{{$index}}-actions">
+                                    <a class="btn btn-default btn-sm" ui-sref="comentarioUpdate({comentarioId: comentario.id})"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="btn btn-danger btn-sm" ui-sref="comentarioDelete({comentarioId: comentario.id})"><span class="glyphicon glyphicon-trash"></span></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                </div>
+        </div>
     </div>
 </div>
