--- a/galeriaarte-web/src/main/webapp/src/modules/comentarios/comentarios.detail.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/comentarios/comentarios.detail.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<div class="panel panel-default"> 
+    <div class="panel-body">
+    <div class="row">
+        <div class="col-md-3">
+            <dl>     
+                <hr>
+                <dt>Id</dt>
+                <dd>{{currentComentario.id}}</dd>
+                
+                <hr>
+                <dt>Contenido</dt>
+                <dd>{{currentComentario.contenido}}</dd>
+                
+                <hr>
+                <dt>Nombre Cliente</dt>
+                <a ui-sref="clienteDetail({clienteId: currentComentario.cliente.id})">{{currentComentario.cliente.name}}</a>
+
+             </dl>
+        </div>
+    </div>
+    </div>
+</div>
