--- a/galeriaarte-web/src/main/webapp/src/modules/comentarios/new/comentarios.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/comentarios/new/comentarios.new.html
@@ -5,16 +5,22 @@
                 <label ng-if="edit" id="editComentario">Edit Comentario</label></div>
             <div class="panel-body">
                 <form ng-submit="createComentario()" name="comentario">
-                    <div class="form-group row">
+<!--                    <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="comentarioId" class="col-sm-2">Id:</label>
                             <input id="comentarioId" required ng-model="comentarioId" class="col-sm-6"/>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="comentarioContenido" class="col-sm-2">Contenido:</label>
                             <input id="comentarioContenido" required ng-model="comentarioContenido" class="col-sm-6"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="form-group col-md-6">
+                            <label for="comentarioClienteId" class="col-sm-2">Id cliente:</label>
+                            <input id="comentarioClienteId" required ng-model="comentarioClienteId" class="col-sm-6"/>
                         </div>
                     </div>
                     <div ng-if="edit" class="panel-group" id="theClientes">
