--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -50,10 +50,12 @@
         <script src="src/modules/galerias/galerias.mod.js" type="text/javascript"></script>
         <script src="src/modules/galerias/galerias.ctrl.js" type="text/javascript"></script>
                 
-<!--         Hojas 
-        <script src="src/modules/hojas/hojas.mod.js" type="text/javascript"></script>
-        <script src="src/modules/hojas/hojas.ctrl.js" type="text/javascript"></script>-->
-                
+<!--        Hojas -->
+        <script src="src/modules/hojasVida/hojasVida.mod.js" type="text/javascript"></script>
+        <script src="src/modules/hojasVida/hojasVida.ctrl.js" type="text/javascript"></script>
+         <script src="src/modules/hojasVida/delete/hojasVida.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/hojasVida/new/hojasVida.new.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/hojasVida/update/hojasVida.update.ctrl.js" type="text/javascript"></script>        
          <!--Marcos--> 
         <script src="src/modules/marcos/marcos.mod.js" type="text/javascript"></script>
         <script src="src/modules/marcos/marcos.ctrl.js" type="text/javascript"></script>
@@ -90,7 +92,7 @@
                         <li><a ui-sref="catalogosList">Catalogos</a></li>
                         <li><a ui-sref="comprasList">Compras</a></li>
                         <li><a ui-sref="galeriasList">Galerias</a></li>
-                        <li><a ui-sref="hojasList">Hojas de vida</a></li>
+                        <li><a ui-sref="hojasVidaList">Hojas de vida</a></li>
                         <li><a ui-sref="marcosList">Marcos</a></li>
                         <li><a ui-sref="obrasList">Obras</a></li>
                         <li><a ui-sref="pagosList">Pagos</a></li>
