--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -50,6 +50,9 @@
          <!--Compras--> 
         <script src="src/modules/compras/compras.mod.js" type="text/javascript"></script>
         <script src="src/modules/compras/compras.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/compras/delete/compras.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/compras/new/compras.new.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/compras/update/compras.update.ctrl.js" type="text/javascript"></script>
                 
          <!--Galerias--> 
         <script src="src/modules/galerias/galerias.mod.js" type="text/javascript"></script>
@@ -78,6 +81,8 @@
          <!--Pagos--> 
         <script src="src/modules/pagos/pagos.mod.js" type="text/javascript"></script>
         <script src="src/modules/pagos/pagos.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/pagos/delete/pagos.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/pagos/new/pagos.new.ctrl.js" type="text/javascript"></script>
         
         <script src="src/app.js" type="text/javascript"></script> 
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script> 
