--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="resources/css/styles.css" />
 
         
-        <<!-- Clientes -->
+        <!-- Clientes -->
         <script src="src/modules/clientes/clientes.mod.js" type="text/javascript"></script>
         <script src="src/modules/clientes/clientes.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/clientes/delete/clientes.delete.ctrl.js" type="text/javascript"></script>
