--- a/galeriaarte-web/src/main/webapp/src/modules/catalogos/delete/catalogo.delete.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/catalogos/delete/catalogo.delete.html
@@ -6,6 +6,6 @@ and open the template in the editor.
 -->
 <div class="center-block well text-center">
     <h1>¿Está seguro que desea eliminar el catálogo?</h1>
-    <button id="confirm-delete" ng-click="deleteCatálogo()" class="btn btn-danger">Delete</button>
-    <a id="cancel-delete" ui-sref="blogsList" class="btn btn-info">Cancel</a>
+    <button id="confirm-delete" ng-click="deleteCatálogo()" class="btn btn-danger">Eliminar</button>
+    <a id="cancel-delete" ui-sref="blogsList" class="btn btn-info">Cancelar</a>
 </div>
