--- a/galeriaarte-web/src/main/webapp/src/modules/catalogos/catalogos.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/catalogos/catalogos.list.html
@@ -1,25 +1,37 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
 <div class="container-fluid">
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID</th> 
-                    <th>Categoría</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="marco in marcosRecords">
-                    <td id="{{$index}}-id">{{catalogo.id}}</td>
-                    <td id="{{$index}}-catalogo">{{catalogo.categoria}}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="panel-group">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><label>Lista de Catálogos</label></div>
+            <div class="panel-body">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-2" role="group" aria-label="First group">
+                        <a class="btn btn-info" ui-sref="catalogosCreate"><span class="glyphicon glyphicon-plus-sign"></span> Agregar un nuevo Catálogo</a>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Id</th>    
+                                <th>Categoría</th>  
+                                <th>Acciones</th>  
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="catalogo in catalogosRecords">
+                                <td id="{{$index}}-id"><a ui-sref="catalogoDetail({catalogoId: catalogo.id})">{{catalogo.id}}</a></td>
+                                <td id="{{$index}}-categoria"><a ui-sref="catalogoDetail({catalogoId: catalogo.id})">{{catalogo.categoria}}</a></td>
+                                <td id="{{$index}}-acciones">
+                                    <a class="btn btn-default btn-sm" ui-sref="catalogoUpdate({catalogoId: catalogo.id})"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="btn btn-danger btn-sm" ui-sref="catalogoDelete({catalogoId: catalogo.id})"><span class="glyphicon glyphicon-trash"></span></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 </div>
