--- a/galeriaarte-web/src/main/webapp/src/modules/catalogos/new/catalogos.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/catalogos/new/catalogos.new.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createBlog">Crear catalogo blog</label>
+            <div class="panel-heading"><label ng-if="!edit" id="createBlog">Crear nuevo catálogo</label>
                 <label ng-if="edit" id="editCatalogo">Editar catalogo</label></div>
            < <div class="panel-body">
                 <form ng-submit="createCatalogo()" categoria="catalogo">
@@ -15,12 +15,6 @@ and open the template in the editor.
                         <div class="form-group col-md-6">
                             <label for="categoriaCatalogo" class="col-sm-2">Categoria:</label>
                             <input id="categoriaCatalogo" required ng-model="categoriaCatalogo" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="blogContenido" class="col-sm-2">Contenido:</label>
-                            <textarea id="blogContenido" required ng-model="blogContenido" class="col-sm-6"></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
