--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -60,7 +60,7 @@
         <script src="src/modules/galerias/galerias.mod.js" type="text/javascript"></script>
         <script src="src/modules/galerias/galerias.ctrl.js" type="text/javascript"></script>
 
-        <!--        Hojas -->
+        <!--Hojas -->
         <script src="src/modules/hojasVida/hojasVida.mod.js" type="text/javascript"></script>
         <script src="src/modules/hojasVida/hojasVida.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/hojasVida/delete/hojasVida.delete.ctrl.js" type="text/javascript"></script>
@@ -73,7 +73,7 @@
         <script src="src/modules/marcos/new/marcos.new.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/marcos/update/marcos.update.ctrl.js" type="text/javascript"></script>
 
-        <!--        Obras -->
+        <!--Obras -->
         <script src="src/modules/obras/obras.mod.js" type="text/javascript"></script>
         <script src="src/modules/obras/obras.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/obras/delete/obras.delete.ctrl.js" type="text/javascript"></script>
@@ -109,7 +109,7 @@
 
         <div class="container-fluid"> 
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
                     <ul class="nav nav-pills nav-stacked">
                         <li><a ui-sref="artistasList"><span class="glyphicon glyphicon-home"></span> Página principal</a></li> <!--Mejorar porque esta conectado con ARTISTA y no debería ser así.--> 
                         <li><a ui-sref="catalogosList"><span class="glyphicon glyphicon-book"></span> Catálogos</a></li>
