--- a/galeriaarte-web/src/main/webapp/src/modules/pagos/pagos.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/pagos/pagos.list.html
@@ -15,7 +15,7 @@
                                 <th>Id</th> 
                                 <th>Total</th>
                                 <th>Impuesto</th>
-                                <th>IdCompra/th>
+                                <th>IdCompra</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
@@ -36,25 +36,3 @@
         </div>
     </div>
 </div>
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" 
-       close="closeAlert()">{{alert.msg}} </alert>
-<div id="alertPanel" style="text-align: center"></div>
-<div class="container-fluid">  
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Total</th> 
-                    <th>Impuesto</th>               
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="pago in pagosRecords"> 
-                    <td id="{{$index}}-total">{{pago.total}}</td>   
-                    <td id="{{$index}}-impuesto">{{pago.impuesto}}</td>   
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-
