--- a/galeriaarte-web/src/main/webapp/src/modules/compras/new/compras.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/compras/new/compras.new.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-<<<<<<< HEAD
+
             <div class="panel-heading"><label ng-if="!edit" id="createCompra">Comprar</label>
                 <label ng-if="edit" id="editCliente">Edit Compra</label></div>
             <div class="panel-body">
                 <form ng-submit="createCompra()" name="compra">
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="compraValor" class="col-sm-2">Valor:</label>
-                            <input id="compraValor" required ng-model="compraValor" class="col-sm-6"/>
+                            <label for="valor" class="col-sm-2">Valor:</label>
+                            <input id="valor" required ng-model="valor" class="col-sm-6"/>
                         </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="compraFecha" class="col-sm-2">Fecha:</label>
-                            <input type="date" id="compraFecha" placeholder="DD/MM/YYYY" required ng-model="compraFecha" class="col-sm-6"/>
+                            <label for="fecha" class="col-sm-2">Fecha:</label>
+                            <input type="date" id="fecha" placeholder="DD/MM/YYYY" required ng-model="fecha" class="col-sm-6"/>
                         </div>
                     </div>
                     <div ng-if="edit" class="panel-group" id="thePagos">
@@ -42,24 +42,11 @@
                         </div>
                     </div>
 
-=======
             <div class="panel-heading"><label ng-if="!edit" id="createCompra">Crear nueva compra</label>
                 <label ng-if="edit" id="editCompra">Editar compra</label></div>
             <div class="panel-body">
                 <form ng-submit="createCompra()" name="blog">
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="compraName" class="col-sm-2">Nombre:</label>
-                            <input id="compraName" required ng-model="compraName" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="compraContenido" class="col-sm-2">Contenido:</label>
-                            <textarea id="compraContenido" required ng-model="compraContenido" class="col-sm-6"></textarea>
-                        </div>
-                    </div>
->>>>>>> origin/master
+
                     <div class="form-group row">
                         <div class="form-group col-sm-4" ng-if="!compra.$valid">
 
