--- a/galeriaarte-web/src/main/webapp/src/modules/clientes/clientes.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/clientes/clientes.list.html
@@ -5,7 +5,7 @@
             <div class="panel-body">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <a class="btn btn-info" ui-sref="clienteCreate"><span class="glyphicon glyphicon-plus-sign"></span> Add new cliente</a>
+                        <a ng-if="isAuthenticated() && hasPermissions()" class="btn btn-info" ui-sref="clienteCreate"><span class="glyphicon glyphicon-plus-sign"></span> Add new cliente</a>
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -16,6 +16,7 @@
                                 <th>TipoTarjeta</th> 
                                 <th>NumTarjeta</th>    
                                 <th>Acciones</th>
+                                <th ng-if="isAuthenticated() && hasPermissions()">Actions</th> 
                             </tr>
                         </thead>
                         <tbody>
@@ -24,8 +25,8 @@
                                 <td id="{{$index}}-tipoTarjeta">{{cliente.tipoTarjeta}}</td>   
                                 <td id="{{$index}}-numTarjeta">{{cliente.numTarjeta}}</td>
                                 <td id="{{$index}}-actions">
-                                    <a class="btn btn-default btn-sm" ui-sref="clienteUpdate({clienteId: cliente.id})"><span class="glyphicon glyphicon-edit"></span></a>
-                                    <a class="btn btn-danger btn-sm" ui-sref="clienteDelete({clienteId: cliente.id})"><span class="glyphicon glyphicon-trash"></span></a>
+                                    <a ng-if="isAuthenticated() && hasPermissions()" id="{{$index}}-edit" class="btn btn-default btn-sm" ui-sref="clienteUpdate({clienteId: cliente.id})"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a  ng-if="isAuthenticated() && hasPermissions()" id="{{$index}}-delete" class="btn btn-danger btn-sm" ui-sref="clienteDelete({clienteId: cliente.id})"><span class="glyphicon glyphicon-trash"></span></a>
                                 </td>
                             </tr>
                          </tbody>
