--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -9,6 +9,7 @@
         <title>Sitio oficial de Galeria de Arte Kadda</title>
         
         <link rel="shortcut icon" href="resources/images/Kadda.jpg">
+        <link rel="stylesheet" href="resources/css/login.css" />
 
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <script src="bower_components/angular/angular.js"></script>
